[tool.poetry]
name = "bethpage"
version = "0.1.0"
description = ""
authors = ["samchristensen <sjchristensen1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
redis = "^5.0.0"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
